--- a/css/style3.css
+++ b/css/style3.css
@@ -17,5 +17,15 @@ body {
     width: 20%;
     position: absolute;
     left: 427px;
-    top: 198px;
+    top: 236px;
+}
+
+#logo {
+    margin-top: 20px;
+    animation: scale 1s infinite alternate;
+}
+
+@keyframes scale {
+    0% {transform: scale(1);}
+    100% {transform: scale(1.09);}
 }
