--- a/css/style3.css
+++ b/css/style3.css
@@ -25,6 +25,15 @@ body {
     animation: scale 1s infinite alternate;
 }
 
+#pokeballl:hover {
+    animation: rotate 1s infinite alternate;
+}
+
+@keyframes rotate {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
+}
+
 @keyframes scale {
     0% {transform: scale(1);}
     100% {transform: scale(1.09);}
